src/test/resources/invalid/InvalidPackage.sc
/* (c) https://github.com/MontiCore/monticore */
package foo;

statechart InvalidPackage {
  initial state A;
}